# GigaCppConnect

./: README.md
src/: CMakeLists.txt
src/GigaCppConnect/: CMakeLists.txt  GigaCppConnect.cpp  GigaCppConnect.h  GigaCppTypes.h
